--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-history-person/ms-history-person.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-history-person/ms-history-person.component.html
@@ -32,7 +32,8 @@
   <cadmus-person-name
     [model$]="name$"
     [langEntries]="langEntries"
-    [tagEntries]="tagEntries"
+    [tagEntries]="nameTagEntries"
+    [typeEntries]="nameTypeEntries"
     (modelChange)="onNameChanged($event)"
   ></cadmus-person-name>
 
