--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-annotation/ms-annotation.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-annotation/ms-annotation.component.html
@@ -16,7 +16,7 @@
     </mat-form-field>
 
     <!-- language (free) -->
-    <mat-form-field style="width: 8em">
+    <mat-form-field *ngIf="!langEntries?.length" style="width: 8em">
       <input matInput [formControl]="language" placeholder="language" />
       <mat-error
         *ngIf="
@@ -46,7 +46,7 @@
     </mat-form-field>
 
     <!-- type (free) -->
-    <mat-form-field style="width: 8em">
+    <mat-form-field *ngIf="!typeEntries?.length" style="width: 8em">
       <input matInput [formControl]="type" placeholder="type" />
       <mat-error *ngIf="type.errors?.required && (type.dirty || type.touched)"
         >type required</mat-error
