Fixes to watermarks

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-watermarks-part/ms-watermarks-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-watermarks-part/ms-watermarks-part.component.html
@@ -14,10 +14,9 @@
               type="button"
               mat-icon-button
               color="primary"
-              matTooltip="Add watermark"
               (click)="addWatermark()"
             >
-              <mat-icon>add_circle</mat-icon>
+              <mat-icon>add_circle</mat-icon> add watermark
             </button>
           </div>
           <table *ngIf="watermarks?.length">
