--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,8 @@
   </div>
   <article>
     <h2>Welcome</h2>
-    <p>Welcome to the Itinera project editing dashboard.</p>
+    <h3>Petrarch’s ITINERA: Italian Trecento Intellectual Network and European Renaissance Advent</h3>
+    <p>Welcome to the project editing dashboard.</p>
     <p>
       You can use this dashboard to edit the Itinera database composed of
       letters, correspondents, poetic texts, manuscripts, and hands.
