--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-part/person-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-part/person-part.component.html
@@ -8,7 +8,7 @@
     </mat-card-header>
     <mat-card-content>
       <!-- ID TAB -->
-      <mat-tab-group>
+      <mat-tab-group (selectedIndexChange)="onTabIndexChanged($event)">
         <!-- person ID -->
         <mat-tab label="ID">
           <div>
@@ -116,7 +116,10 @@
               <mat-icon>add_circle</mat-icon> add name
             </button>
           </div>
-          <mat-expansion-panel [expanded]="nameIndex > -1" [disabled]="nameIndex < 0">
+          <mat-expansion-panel
+            [expanded]="nameIndex > -1"
+            [disabled]="nameIndex < 0"
+          >
             <mat-expansion-panel-header>
               <mat-panel-title>name</mat-panel-title>
             </mat-expansion-panel-header>
@@ -132,7 +135,7 @@
           </mat-expansion-panel>
 
           <!-- external IDs -->
-          <br>
+          <br />
           <mat-expansion-panel>
             <mat-expansion-panel-header>
               <mat-panel-title>external IDs</mat-panel-title>
@@ -193,18 +196,18 @@
         </mat-tab>
 
         <!-- BIO TAB -->
-        <mat-tab label="bio">
+        <mat-tab label="biography">
           <!-- bio -->
-          <div>
-            <ngx-monaco-editor
-              [options]="editorOptions"
-              [formControl]="bio"
-            ></ngx-monaco-editor>
-            <mat-error
-              *ngIf="bio.hasError('max-length') && (bio.touched || bio.dirty)"
-              >bio too long</mat-error
-            >
-          </div>
+          <ngx-monaco-editor
+            style="width:95%"
+            #editorbio
+            [options]="editorOptions"
+            [formControl]="bio"
+          ></ngx-monaco-editor>
+          <mat-error
+            *ngIf="bio.hasError('max-length') && (bio.touched || bio.dirty)"
+            >bio too long</mat-error
+          >
         </mat-tab>
       </mat-tab-group>
     </mat-card-content>
