Refactored part editing

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-pseudonyms-part/corr-pseudonyms-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-pseudonyms-part/corr-pseudonyms-part.component.html
@@ -14,10 +14,9 @@
               type="button"
               mat-icon-button
               color="primary"
-              matTooltip="Add pseudonym"
               (click)="addPseudonym()"
             >
-              <mat-icon>add_circle</mat-icon>
+              <mat-icon>add_circle</mat-icon> add pseudonym
             </button>
           </div>
           <table *ngIf="pseudonyms?.length">
