--- a/projects/myrmidon/cadmus-itinera-part-lt-pg/src/lib/attachments-part-feature/attachments-part-feature.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-pg/src/lib/attachments-part-feature/attachments-part-feature.component.html
@@ -2,8 +2,8 @@
 <cadmus-attachments-part
   [itemId]="itemId"
   [roleId]="roleId"
-  [json]="json$ | async"
-  (jsonChange)="save($event)"
+  [model]="part$ | async"
+  (modelChange)="save($event)"
   [thesauri]="thesauri$ | async"
   (editorClose)="close()"
   (dirtyChange)="onDirtyChange($event)"
