--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/attachments-part/attachments-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/attachments-part/attachments-part.component.html
@@ -79,7 +79,7 @@
             </mat-form-field>
 
             <!-- type (free) -->
-            <mat-form-field>
+            <mat-form-field *ngIf="!typeEntries?.length" style="width: 8em">
               <input matInput formControlName="type" placeholder="type" />
               <mat-error
                 *ngIf="
