--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/cited-person/cited-person.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/cited-person/cited-person.component.html
@@ -1,13 +1,175 @@
 <form [formGroup]="form" (submit)="save()">
   <h4>name</h4>
   <div>
-    <cadmus-person-name
-      [model$]="name$"
-      [langEntries]="langEntries"
-      [tagEntries]="nameTagEntries"
-      [typeEntries]="nameTypeEntries"
-      (modelChange)="onNameChange($event)"
-    ></cadmus-person-name>
+    <!-- language (bound) -->
+    <ng-container *ngIf="!langEntries?.length">
+      <mat-form-field style="width: 6em">
+        <input matInput placeholder="language" [formControl]="language" />
+        <mat-error
+          *ngIf="
+            language.hasError('required') &&
+            (language.dirty || language.touched)
+          "
+          >enter a language</mat-error
+        >
+        <mat-error
+          *ngIf="
+            language.hasError('max-length') &&
+            (language.dirty || language.touched)
+          "
+          >language too long</mat-error
+        >
+      </mat-form-field>
+    </ng-container>
+    <!-- language (free) -->
+    <ng-container *ngIf="langEntries?.length">
+      <mat-form-field style="width: 6em">
+        <mat-select [formControl]="language" placeholder="language">
+          <mat-option *ngFor="let e of langEntries" [value]="e.id">{{
+            e.value
+          }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </ng-container>
+
+    &nbsp;
+    <!-- tag (free) -->
+    <mat-form-field style="width: 8em" *ngIf="!nameTagEntries?.length">
+      <input matInput placeholder="tag" [formControl]="tag" />
+      <mat-error *ngIf="tag.hasError('required') && (tag.dirty || tag.touched)"
+        >enter a tag</mat-error
+      >
+      <mat-error
+        *ngIf="tag.hasError('max-length') && (tag.dirty || tag.touched)"
+        >tag too long</mat-error
+      >
+    </mat-form-field>
+    <!-- tag (bound) -->
+    <mat-form-field style="width: 8em" *ngIf="nameTagEntries?.length">
+      <mat-select [formControl]="tag" placeholder="tag">
+        <mat-option *ngFor="let e of nameTagEntries" [value]="e.id">{{
+          e.value
+        }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+
+  <!-- parts -->
+  <div formArrayName="parts">
+    <div>
+      <button
+        type="button"
+        mat-stroked-button
+        color="primary"
+        (click)="addPart()"
+        matTooltip="Add a new part to the name"
+      >
+        <mat-icon>add_circle</mat-icon> add part
+      </button>
+    </div>
+    <div
+      *ngFor="
+        let item of parts.controls;
+        let i = index;
+        let first = first;
+        let last = last
+      "
+    >
+      <!-- child form -->
+      <div [formGroupName]="i">
+        <!-- child actions -->
+        {{ i + 1 }}.
+        <button
+          mat-icon-button
+          type="button"
+          matTooltip="Remove this part"
+          color="warn"
+          (click)="removePart(i)"
+        >
+          <mat-icon>remove_circle</mat-icon>
+        </button>
+        <button
+          [disabled]="first"
+          mat-icon-button
+          type="button"
+          matTooltip="Move part up"
+          (click)="movePartUp(i)"
+        >
+          <mat-icon>arrow_upward</mat-icon>
+        </button>
+        <button
+          [disabled]="last"
+          mat-icon-button
+          type="button"
+          matTooltip="Move part down"
+          (click)="movePartDown(i)"
+        >
+          <mat-icon>arrow_downward</mat-icon>
+        </button>
+
+        <!-- child controls -->
+        <!-- type (bound) -->
+        <mat-form-field style="width: 8em" *ngIf="nameTypeEntries?.length">
+          <mat-select formControlName="type" placeholder="type">
+            <mat-option *ngFor="let e of nameTypeEntries" [value]="e.id">{{
+              e.value
+            }}</mat-option>
+          </mat-select>
+          <mat-error
+            *ngIf="
+              item['controls'].type.hasError('required') &&
+              (item['controls'].type.dirty || item['controls'].type.touched)
+            "
+            >select a type
+          </mat-error>
+        </mat-form-field>
+
+        <!-- type (free) -->
+        <mat-form-field style="width: 8em" *ngIf="!nameTypeEntries.length">
+          <input matInput formControlName="type" placeholder="type" />
+          <mat-error
+            *ngIf="
+              item['controls'].type.hasError('required') &&
+              (item['controls'].type.dirty || item['controls'].type.touched)
+            "
+            >enter a type
+          </mat-error>
+          <mat-error
+            *ngIf="
+              item['controls'].type.hasError('max-length') &&
+              (item['controls'].type.dirty || item['controls'].type.touched)
+            "
+            >type too long
+          </mat-error>
+        </mat-form-field>
+
+        <!-- value -->
+        <mat-form-field>
+          <input
+            #partValue
+            matInput
+            maxlength="50"
+            formControlName="value"
+            placeholder="value"
+            autofocus
+          />
+          <mat-error
+            *ngIf="
+              item['controls'].value.hasError('required') &&
+              (item['controls'].value.dirty || item['controls'].value.touched)
+            "
+            >enter a value
+          </mat-error>
+          <mat-error
+            *ngIf="
+              item['controls'].value.hasError('max-length') &&
+              (item['controls'].value.dirty || item['controls'].value.touched)
+            "
+            >value too long
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
   </div>
 
   <br />
