--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
@@ -123,7 +123,7 @@
             </mat-form-field>
 
             <!-- type (free) -->
-            <mat-form-field>
+            <mat-form-field *ngIf="!typeEntries?.length" style="width: 8em">
               <input matInput formControlName="type" placeholder="type" />
               <mat-error
                 *ngIf="
