Moved PhysicalSize and PhysicalDimension to shell

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-binding-part/ms-binding-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-binding-part/ms-binding-part.component.html
@@ -143,12 +143,12 @@
       <div>
         <!-- size -->
         <h4>size</h4>
-        <itinera-physical-size
+        <cadmus-physical-size
           [(size)]="size"
           [tagEntries]="sizeTagEntries"
           [dimTagEntries]="dimTagEntries"
           [unitEntries]="unitEntries"
-        ></itinera-physical-size>
+        ></cadmus-physical-size>
       </div>
     </mat-card-content>
     <mat-card-actions>
